packages/kyvernoPolicies/chart/tests/mpol/add-default-securitycontext-cel/kyverno-test/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bare-pod
  namespace: default
spec:
  containers:
    - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      name: test
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsNonRoot: true
    runAsUser: 65534
---
apiVersion: v1
kind: Pod
metadata:
  name: partial-pod
  namespace: default
spec:
  containers:
    - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      name: test
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsNonRoot: false
    runAsUser: 1000
---
apiVersion: v1
kind: Pod
metadata:
  name: full-pod
  namespace: default
spec:
  containers:
    - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      name: test
  securityContext:
    fsGroup: 3000
    runAsGroup: 2000
    runAsNonRoot: false
    runAsUser: 1000
